--- a/assets/pages/gallery.html
+++ b/assets/pages/gallery.html
@@ -5,16 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Gallery</title>
 </head>
 
 <body>
     <a href="../../index.html">to Home</a>
-    <img src="../images/pexels-photo-674010.jpeg" alt="img">
-    <img src="../images/pexels-photo-674010.jpeg" alt="img">
-    <img src="../images/pexels-photo-674010.jpeg" alt="img">
-    <img src="../images/pexels-photo-674010.jpeg" alt="img">
-    <img src="../images/pexels-photo-674010.jpeg" alt="img">
+
+    <div class="gallery_block">
+        <img src="../images/pexels-photo-674010.jpeg" alt="img">
+        <img src="../images/pexels-photo-674010.jpeg" alt="img">
+        <img src="../images/pexels-photo-674010.jpeg" alt="img">
+        <img src="../images/pexels-photo-674010.jpeg" alt="img">
+        <img src="../images/pexels-photo-674010.jpeg" alt="img">
+    </div>    
 </body>
 
 </html>
